Added related blogs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,6 +101,17 @@
         </div>
       </div>
 
+      <div class="wrapper-main">
+        <div id="main" role="main" class="container">
+        <h2> Related Content & Blogs</h2>
+          <ul>
+            <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative</a></li>
+            <li><a href="https://nisheethvishnoi.wordpress.com/">Algorithms, Nature and Society</a></li>
+            <li><a href="https://datascienceethics.org/">Data Science Ethics</a></li>
+          </ul> 
+        </div>
+      </div>
+
       <div class="wrapper-footer">
         <div class="container">
           <footer class="footer">
