--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,14 +96,10 @@
 
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
-        <h2> Papers </h2>
-        {{ content }}
-        </div>
-      </div>
+          <h2> Papers </h2>
+          {{ content }}
 
-      <div class="wrapper-main">
-        <div id="main" role="main" class="container">
-        <h2> Related Content & Blogs</h2>
+          <h2> Related Content</h2>
           <ul>
             <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative</a></li>
             <li><a href="https://nisheethvishnoi.wordpress.com/">Algorithms, Nature and Society</a></li>
@@ -111,6 +107,7 @@
           </ul> 
         </div>
       </div>
+
 
       <div class="wrapper-footer">
         <div class="container">
