--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -93,21 +93,22 @@
         </div>
       </div>
 
-
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
           <h2> Papers </h2>
           {{ content }}
 
-          <h2> Related Content</h2>
-          <ul>
-            <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative</a></li>
-            <li><a href="https://nisheethvishnoi.wordpress.com/">Algorithms, Nature and Society</a></li>
-            <li><a href="https://datascienceethics.org/">Data Science Ethics</a></li>
-          </ul> 
+          <div style="margin-bottom:3cm;">       
+            <h2> Related Content</h2>
+            <ul>
+              <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative</a></li>
+              <li><a href="https://nisheethvishnoi.wordpress.com/">Algorithms, Nature and Society</a></li>
+              <li><a href="https://datascienceethics.org/">Data Science Ethics</a></li>
+            </ul> 
+          </div>
+
         </div>
       </div>
-
 
       <div class="wrapper-footer">
         <div class="container">
