--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,13 +26,7 @@
               <!-- <p class="site-description">{{ site.description }}</p>  -->
             </div>
 
-<!--             <nav>
-              <a href="{{ site.baseurl }}/">Home</a>
-              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
-              <a href="{{ site.baseurl }}/search">Search</a>
-              <a href="{{ site.baseurl }}/about">About</a>
-            </nav>
- -->          </header>
+          </header>
         </div>
       </div>
 
@@ -49,8 +43,7 @@
         <div style="text-align: center;">
           <p>
             <a href="https://fair-personalized-news.herokuapp.com/fast/diversity.php">
-              <img src="images/polarization.png" height="32" width="32"/>
-              
+              <img src="images/polarization.png" height="150" width="150"/>
             </a><span style="display:inline-block; width: 75px;"></span>
             <a href="https://fair-image-search.herokuapp.com/imageDiversity.php">
               <img src="images/sampling.png" height="150" width="150"/>
