--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,13 @@
               <!-- <p class="site-description">{{ site.description }}</p>  -->
             </div>
 
-          </header>
+<!--             <nav>
+              <a href="{{ site.baseurl }}/">Home</a>
+              <a href="{{ site.baseurl }}/getting-started">Getting Started</a>
+              <a href="{{ site.baseurl }}/search">Search</a>
+              <a href="{{ site.baseurl }}/about">About</a>
+            </nav>
+ -->          </header>
         </div>
       </div>
 
@@ -37,13 +43,28 @@
         </div>
       </div>
 
+    
+
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
-        <h2> Demos & Notebooks</h2>
+        <h2> People </h2>
+          <b>Faculty</b> - <a href={{ site.faculty1Site }}>{{ site.faculty1 }}</a>, <a href={{ site.faculty2Site }}>{{ site.faculty2 }}</a> <br>
+          <b>Postdocs</b> - <a href={{ site.postDoc1Site }}>{{ site.postDoc1 }}</a> <br>
+          <b>PhD students</b> - <a href={{ site.phdStudent1Site }}>{{ site.phdStudent1 }}</a>, <a href={{ site.phdStudent2Site }}>{{ site.phdStudent2 }}</a><br>
+          <b>Undergraduate students</b> - {{ site.undergrad1 }} <br>
+          <b>Alumni</b> - {{ site.alumni }} <br>
+        </div>
+      </div>
+
+      
+        <div class="wrapper-main">
+        <div id="main" role="main" class="container">
+        <h2> Demos</h2>
         <div style="text-align: center;">
           <p>
             <a href="https://fair-personalized-news.herokuapp.com/fast/diversity.php">
-              <img src="images/polarization.png" height="150" width="150"/>
+              <img src="images/polarization.png" height="32" width="32"/>
+              
             </a><span style="display:inline-block; width: 75px;"></span>
             <a href="https://fair-image-search.herokuapp.com/imageDiversity.php">
               <img src="images/sampling.png" height="150" width="150"/>
@@ -74,29 +95,16 @@
           <!-- <img src="images/polarization.png" alt="Polarization in News Search" style="width:150px;height:150px;"> -->
           <!-- <img src="images/voting.png" alt="Multi-winner Voting" style="width:150px;height:150px;"> -->
       </div>
-
-
-      <div class="wrapper-main">
-        <div id="main" role="main" class="container">
-        <h2> People </h2>
-          <b>Faculty</b> - <a href={{ site.faculty1Site }}>{{ site.faculty1 }}</a>, <a href={{ site.faculty2Site }}>{{ site.faculty2 }}</a> <br>
-          <b>Postdocs</b> - <a href={{ site.postDoc1Site }}>{{ site.postDoc1 }}</a> <br>
-          <b>PhD students</b> - <a href={{ site.phdStudent1Site }}>{{ site.phdStudent1 }}</a>, <a href={{ site.phdStudent2Site }}>{{ site.phdStudent2 }}</a><br>
-          <b>Undergraduate students</b> - {{ site.undergrad1 }} <br>
-          <b>Alumni</b> - {{ site.alumni }} <br>
-        </div>
-      </div>
-
+      
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
           <h2> Papers </h2>
           {{ content }}
 
           <div style="margin-bottom:3cm;">       
-            <h2> Related Content</h2>
+            <h2> Related pages</h2>
             <ul>
-              <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative</a></li>
-              <li><a href="https://nisheethvishnoi.wordpress.com/">Algorithms, Nature and Society</a></li>
+              <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative at Yale</a></li>
               <li><a href="https://datascienceethics.org/">Data Science Ethics</a></li>
             </ul> 
           </div>
