--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,6 +105,7 @@
             <h2> Related pages</h2>
             <ul>
               <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative at Yale</a></li>
+              <li><a href="https://aplusalliance.org/pages/alliance">A+ Alliance</a></li> 
               <li><a href="https://datascienceethics.org/">Data Science Ethics</a></li>
             </ul> 
           </div>
