--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,81 +37,96 @@
       </div>
 
 
+
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
           {{ site.description }}
         </div>
       </div>
 
-    
-
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
         <h2> People </h2>
-          <b>Faculty</b> - <a href={{ site.faculty1Site }}>{{ site.faculty1 }}</a>, <a href={{ site.faculty2Site }}>{{ site.faculty2 }}</a> <br>
-          <b>Postdocs</b> - <a href={{ site.postDoc1Site }}>{{ site.postDoc1 }}</a> <br>
-          <b>PhD students</b> - <a href={{ site.phdStudent1Site }}>{{ site.phdStudent1 }}</a>, <a href={{ site.phdStudent2Site }}>{{ site.phdStudent2 }}</a><br>
-          <b>Undergraduate students</b> - {{ site.undergrad1 }} <br>
+          <b>Faculty</b> - 
+          
+          {% for faculty in site.faculty %}
+            <a href={{ faculty.website }}>{{ faculty.name }}</a>
+          {% endfor %}
+          <br>
+
+          <b>Postdocs</b> - 
+          
+          {% for postdoc in site.postdoc %}
+            <a href={{ postdoc.website }}>{{ postdoc.name }}</a>
+          {% endfor %}
+          <br>
+
+          <b>PhD students</b> - 
+          
+          {% for phd in site.phd %}
+            <a href={{ phd.website }}>{{ phd.name }}</a>
+          {% endfor %}
+          <br>
+
+          <b>Undergraduate students</b> - 
+          
+          {% for undergrad in site.undergrad %}
+            <a href={{ undergrad.website }}>{{ undergrad.name }}</a>
+          {% endfor %}
+          <br>
+
           <b>Alumni</b> - {{ site.alumni }} <br>
         </div>
       </div>
 
-      
-        <div class="wrapper-main">
+
+      <div class="wrapper-main">
         <div id="main" role="main" class="container">
         <h2> Demos</h2>
-        <div style="text-align: center;">
-          <p>
-            <a href="https://fair-personalized-news.herokuapp.com/fast/diversity.php">
-              <img src="images/polarization.png" height="150" width="150"/>
-              
-            </a><span style="display:inline-block; width: 75px;"></span>
-            <a href="https://fair-image-search.herokuapp.com/imageDiversity.php">
-              <img src="images/sampling.png" height="150" width="150"/>
-            </a><span style="display:inline-block; width: 75px;"></span>
-            <a href="https://fair-online-advertising.herokuapp.com/">
-              <img src="images/onlineAd.png" height="150" width="150" >
-            </a>
-          </p>
-          <p>
-            <a href="https://fair-voting-demo.herokuapp.com/">
-              <img src="images/voting.png" height="130" width="150"/>
-            </a><span style="display:inline-block; width: 75px;"></span>
-            <a href="http://balanced-ranking.herokuapp.com/">
-              <img src="images/ranking.png" height="130" width="150"/>
-            </a><span style="display:inline-block; width: 75px;"></span>
-            <a href="http://cs.yale.edu/bias/blog/jekyll/update/2018/11/06/fair-classification.html">
-              <img src="images/classification.png" height="130" width="150" >
-            </a>
-          </p>
-          <p>
-            <a href="https://github.com/vijaykeswani/Fair-Max-Entropy-Distributions/blob/master/FairMaxEnt-expts-1.ipynb">
-              <img src="images/rebalancing.png" height="130" width="150"/>
-            </a>            
-          </p>
-        </div>
+          <!-- <img src="images/polarization.png" height="64" width="64"/> -->
+
+
+
+          {% for demo in site.demos %}
+          <div style='width:100%; height:auto;'>
+                  <div>
+                      <a href={{ demo.website }}>
+                        <img src={{ demo.image }} class='iconDetails' style='margin-left:2%; float:left; height:64px; width:64px;'>
+                      </a>
+                  </div>  
+              <div style='margin-left:100px;'>
+              <b> {{ demo.title }} </b><br>
+              <div style='font-size:16px'>{{ demo.description }}</div>
+              <div ></div>
+              </div>
+          </div>
+
+          <br>
+
+          {% endfor %}
 
         </div>
-          <!-- <img src="images/polarization.png" alt="Polarization in News Search" style="width:150px;height:150px;"> -->
-          <!-- <img src="images/voting.png" alt="Multi-winner Voting" style="width:150px;height:150px;"> -->
       </div>
-      
+
+
+
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
           <h2> Papers </h2>
           {{ content }}
 
           <div style="margin-bottom:3cm;">       
-            <h2> Related pages</h2>
-            <ul>
-              <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative at Yale</a></li>
-              <li><a href="https://aplusalliance.org/pages/alliance">A+ Alliance</a></li> 
-              <li><a href="https://datascienceethics.org/">Data Science Ethics</a></li>
-            </ul> 
-          </div>
+          <h2> Related Content</h2>
+          <ul>
+            <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative</a></li>
+            <li><a href="https://nisheethvishnoi.wordpress.com/">Algorithms, Nature and Society</a></li>
+            <li><a href="https://datascienceethics.org/">Data Science Ethics</a></li>
+          </ul> 
+        </div>
 
         </div>
       </div>
+
 
       <div class="wrapper-footer">
         <div class="container">
