Updated demo layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -95,7 +95,7 @@
                       </a>
                   </div>  
               <div style='margin-left:100px;'>
-              <b> {{ demo.title }} </b><br>
+              <b> <a href={{ demo.website }}>{{ demo.title }}</a> </b><br>
               <div style='font-size:16px'>{{ demo.description }}</div>
               <div ></div>
               </div>
