--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -116,11 +116,11 @@
           {{ content }}
 
           <div style="margin-bottom:3cm;">       
-          <h2> Related Content</h2>
+          <h2> Related Initiatives</h2>
           <ul>
-            <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative</a></li>
-            <li><a href="https://nisheethvishnoi.wordpress.com/">Algorithms, Nature and Society</a></li>
-            <li><a href="https://datascienceethics.org/">Data Science Ethics</a></li>
+            <li><a href="https://computationsociety.yale.edu/">Computation and Society Initiative at Yale</a></li>
+            <li><a href="https://aplusalliance.org/pages/alliance">A+ Alliance</a></li>
+           
           </ul> 
         </div>
 
