--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,10 @@
           {% endfor %}
           <br>
 
-  
+          <b>Contributors</b> - 
+          
+          Chris Hays, Lingxiao Huang, Vijay Keswani, Anay Mehrotra, Damian Straszak, Yi-Chern Tan, Julia Wei  
+          <br>
 
       <div class="wrapper-main">
         <div id="main" role="main" class="container">
